# eml2cal

./: Pipfile  README.md  config.toml  eml2cal.py  pyproject.toml
extractors/: aerlingus_custom.js
legacy_python/: Pipfile  evt2cal.py
scripts/: eml2cal  process_emails.py  redact.py
src/eml2cal/: cal_utils.py  calendar.py  config.py  emails.py  extractor.py  mail.py  main.py  output.py  postprocess.py  preprocess.py  process.py  schema_org.py  summary.py  utils.py
